--- a/trunk/.htaccess
+++ b/trunk/.htaccess
@@ -1,20 +1,30 @@
 #
-# File: $Id$
-#
-# This .htaccess file sets PHP options that cannot be set at runtime and
-# optionally enables the Apache Rewrite Engine to allow short URLs.
-#
 # @package OpenMonday
-# @subpackage Core
+# @version $Id$
+# @author OpenMonday Development Group
 # @copyright Copyright 2005 OpenMonday Development Group
-# @license GPL {@link http://www.gnu.org/licenses/gpl.html}
+# @license http://www.gnu.org/licenses/gpl.html GNU General Public License
 # @link http://openmonday.martlev.com
 #
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+#
 
-# PHP options
+#
+# Let's try to set some PHP configuration values which cannot be set at
+# runtime.
+#
 php_flag magic_quotes_gpc off
 php_flag magic_quotes_sybase off
 php_flag register_globals off
-
-# Apache mod_rewrite
-# - Not implemented yet
